--- a/style.css
+++ b/style.css
@@ -1,6 +1,65 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 body {
+    font-family: Roboto, serif;
+    margin: 0px;
     display: flex;
     flex-direction: column;
+    min-height: 100vh;
+    justify-content: space-between;
+}
+
+header {
+    display: flex;
+    flex-direction: row;
+    height: 50px;
+    align-items: center;
+    justify-content: space-between;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+ul {
+    display: flex;
+    flex-direction: row;
+    margin: 0px;
+    padding: 0px;
+    gap: 10px;
+}
+
+
+li {list-style: none;}
+
+.hero {
+    display: flex;
+    min-height: 100px;
+    align-items: center;
+    justify-content: center;
+}
+
+.hero-content-wrapper{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.content-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    max-width: 90vw;
+}
+
+.odd-section {
+    text-align: center;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
