--- a/style.css
+++ b/style.css
@@ -23,6 +23,15 @@ button {
     padding: 12px 30px;
 }
 
+section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    max-width: 90vw;
+    min-height: 40vh;
+}
+
 /* Top sections */
 .top-content {
     background-image: url(Images/Climbing.jpg);
@@ -65,7 +74,6 @@ ul {
     min-height: 50vh;
     align-items: center;
     justify-content: center;
-    /* color:rgb(253, 242, 227) */
 }
 
 .hero-content-wrapper{
@@ -90,16 +98,6 @@ ul {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-}
-
-section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    max-width: 90vw;
-    min-height: 40vh;
-
 }
 
 .section-links {
@@ -150,8 +148,14 @@ section {
 
 
 /* Even sections */
-.even-section {
-    display: flex;
+.even-content-wrapper {
+    background-image: url(Images/Squat.jpg);
+    background-color: rgb(177, 162, 163);
+    background-blend-mode: multiply;
+    background-size: cover;
+    background-position: center, left;
+    color:rgb(253, 243, 230);
+    min-height: 50vh;
 }
 
 .even-section-content {
@@ -172,10 +176,13 @@ footer {
     justify-content: space-evenly;
     padding-left: 20px;
     padding-right: 20px;
+    background-color: #3c4858;
+    color: rgb(253, 243, 230);
 }
 
 .footer-content {
     display: flex;
+    justify-content: space-between;
 }
 
 .socials {
