--- a/style.css
+++ b/style.css
@@ -37,7 +37,171 @@ ul {
     gap: 20px;
 }
 
-/* Top sections */
+/* For smaller devices */
+@media only screen and (max-width: 767px){
+    /* Top sections */
+    .top-content {
+        flex-direction: column;
+        background-image: url(Images/Climbing.jpg);
+        background-color: rgb(177, 162, 163);
+        background-blend-mode: multiply;
+        background-size: cover;
+        background-position: center, left;
+        color:rgb(253, 243, 230) ;
+    }
+
+    .nav-items {
+        display: none;
+    }
+
+    header {
+        display: flex;
+        flex-direction: row;
+        height: 50px;
+        align-items: center;
+        justify-content: space-between;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    .logo {
+        font-size: x-large;
+        font-weight: bolder;
+    }
+
+    /* Hero section */
+    .hero {
+        display: flex;
+        min-height: 50vh;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .hero-content-wrapper{
+        display: flex;
+        flex-direction: column;
+        gap: 5vh;
+        max-width: 90vw;
+    }
+
+    .hero-header {
+        font-size: xx-large;
+        font-weight: bold;
+    }
+
+    .hero-content {font-size: large;}
+
+    /* Link sections */
+    .link-section {
+        text-align: center;
+        padding-top: 30px;
+        padding-bottom: 30px;
+    }
+
+    .content-wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        max-width: 90vw;
+        gap: 50px;
+    }
+
+    .link-section-header {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .link-section-title {
+        font-size: x-large;
+        font-weight: bold;
+    }
+
+    .link-section-subtitle {
+        font-size: large;
+        font-weight: lighter;
+        max-width: 80vw;
+    }
+
+    .grid-container {
+        display: grid;
+        grid-auto-flow: column;
+        grid-auto-columns: 1fr;
+        gap: 50px;
+        align-items: center;
+    }
+
+    .section-links {
+        display: flex;
+        flex-direction: row;
+        gap: 10vw;
+    }
+
+    .section-link {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .link-logo {
+        font-weight: bold;
+    }
+
+
+    /* Even sections */
+    .slide-section {
+        background-image: url(Images/Squat.jpg);
+        background-color: rgb(177, 162, 163);
+        background-blend-mode: multiply;
+        background-size: cover;
+        background-position: center, left;
+        color:rgb(253, 243, 230);
+        min-height: 50vh;
+    }
+
+    .slide-section-content {
+        display: flex;
+        gap: 30px;
+        max-width: 90vw;
+    }
+
+    .even-section-link {
+        min-width: 20vw;
+    }
+
+
+    /* Footer */
+    footer {
+        display: flex;
+        flex-direction: column;
+        min-height: 20vh;
+        justify-content: space-evenly;
+        padding-left: 20px;
+        padding-right: 20px;
+        background-color: #3c4858;
+        color: rgb(253, 243, 230);
+    }
+
+    .footer-content {
+        display: flex;
+        justify-content: center;
+    }
+
+    .socials {
+        justify-content: center;
+        align-items: center;
+        min-width: 30vw;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .footer-nav-bar {
+        display: flex;
+        justify-content: center;
+    }
+}
 
 
 @media only screen and (min-width: 768px){
@@ -66,8 +230,6 @@ ul {
         padding-left: 20px;
         padding-right: 20px;
     }
-
-    
 
     .logo {
         font-size: x-large;
