--- a/style.css
+++ b/style.css
@@ -59,6 +59,10 @@ ul {
         display: none;
     }
 
+    #menu-bars {
+        font-size: 30px;
+    }
+
     header {
         display: flex;
         flex-direction: row;
@@ -206,8 +210,7 @@ ul {
     }
 
     .footer-nav-bar {
-        display: flex;
-        justify-content: center;
+        display: none;
     }
 }
 
