Added SHARRC mission and description

--- a/Pages/page-style.css
+++ b/Pages/page-style.css
@@ -106,6 +106,12 @@ ul {
     }
 
 
+    /* Text sections */
+    .text-section {
+        flex-direction: column;
+    }
+
+
     /* Footer */
     footer {
         display: flex;
@@ -193,7 +199,7 @@ ul {
     }
 
     .hero-content {font-size: large;}
-    
+
 
     /* Footer */
     footer {
