--- a/style.css
+++ b/style.css
@@ -236,6 +236,10 @@ ul {
         display: none;
     }
 
+    #drop-down-indicator {
+        font-size: 10px;
+    }
+
     header {
         display: flex;
         flex-direction: row;
@@ -246,10 +250,54 @@ ul {
         padding-right: 10vw;
     }
 
+    nav {
+        display: flex;
+        flex-direction: row;
+        margin: 0px;
+        padding: 0px;
+        gap: 20px;
+    }
+
     .logo {
         font-size: x-large;
         font-weight: bolder;
     } 
+
+    .dropdown {
+        position: relative;
+        display: inline-block;
+    }
+
+    .dropdown-content {
+        display: none;
+        position: absolute;
+        max-width: 160px;
+        box-shadow: 0px 8px 16px 0px rgba(43, 42, 42, 0.2);
+        z-index: 1;
+    }
+
+    .dropdown-content a {
+        padding: 12px 5px;
+        text-decoration: none;
+        display: block;
+    }
+
+    .dropdown:hover {
+        transform: scale(1.1);
+        transition: 0.1s;
+    }
+
+    .dropdown:hover .dropdown-content {display: block;}
+
+    .dropdown-content a:hover {
+        transform: scale(1.05);
+        transition: 0.1s;
+    }
+
+    .non-dropdown:hover {
+        transform: scale(1.1);
+        transition: 0.1s;
+    }
 
 
     /* Hero section */
