--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@ ul {
         align-items: center;
         height: 70vh;
         justify-content: space-evenly;
+        font-size: x-large;
     }
 
     header {
@@ -94,7 +95,7 @@ ul {
         justify-content: space-between;
         padding-left: 20px;
         padding-right: 20px;
-        background-color: #3c4858;
+        /* background-color: #3c4858; */
     }
     
 
@@ -267,7 +268,7 @@ ul {
         flex-direction: row;
         margin: 0px;
         padding: 0px;
-        gap: 20px;
+        gap: 30px;
     }
 
     .logo {
