--- a/style.css
+++ b/style.css
@@ -268,7 +268,7 @@ ul {
         flex-direction: row;
         margin: 0px;
         padding: 0px;
-        gap: 30px;
+        gap: 3vw;
     }
 
     .logo {
