--- a/Pages/page-style.css
+++ b/Pages/page-style.css
@@ -45,7 +45,7 @@ ul {
 /* Top sections */
 .top-content {
     flex-direction: column;
-    background-image: url(Images/Climbing.jpg);
+    background-image: url(../Images/Climbing.jpg);
     background-color: rgb(177, 162, 163);
     background-blend-mode: multiply;
     background-size: cover;
@@ -56,7 +56,7 @@ ul {
 /* For smaller devices */
 @media only screen and (max-width: 767px){
 
-    /* Top sections */
+    /* Top sections
     .top-content {
         flex-direction: column;
         background-image: url(../Images/Climbing.jpg);
@@ -65,9 +65,9 @@ ul {
         background-size: cover;
         background-position: center, left;
         color:rgb(253, 243, 230) ;
-    }
+    } */
 
-    .nav-items {
+    .nav-items, #comp-logo {
         display: none;
     }
 
@@ -75,10 +75,33 @@ ul {
         font-size: 30px;
     }
 
+    .mobile-menu {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .mobile-nav {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    #myLinks {
+        display: none;
+        flex-direction: column;
+        align-items: center;
+        min-height: 40vh;
+        justify-content: space-evenly;
+        font-size: x-large;
+    }
+
     header {
+        overflow: hidden;
+        position: sticky;
         display: flex;
         flex-direction: row;
-        height: 50px;
+        min-height: 55px;
         align-items: center;
         justify-content: space-between;
         padding-left: 20px;
@@ -93,7 +116,7 @@ ul {
     /* Hero section */
     .hero {
         display: flex;
-        min-height: 20vh;
+        height: 40vh;
         align-items: center;
         justify-content: center;
     }
