--- a/Pages/page-style.css
+++ b/Pages/page-style.css
@@ -56,17 +56,6 @@ ul {
 /* For smaller devices */
 @media only screen and (max-width: 767px){
 
-    /* Top sections
-    .top-content {
-        flex-direction: column;
-        background-image: url(../Images/Climbing.jpg);
-        background-color: rgb(177, 162, 163);
-        background-blend-mode: multiply;
-        background-size: cover;
-        background-position: center, left;
-        color:rgb(253, 243, 230) ;
-    } */
-
     .nav-items, #comp-logo {
         display: none;
     }
@@ -91,7 +80,7 @@ ul {
         display: none;
         flex-direction: column;
         align-items: center;
-        min-height: 40vh;
+        height: 40vh;
         justify-content: space-evenly;
         font-size: x-large;
     }
@@ -101,7 +90,6 @@ ul {
         position: sticky;
         display: flex;
         flex-direction: row;
-        min-height: 55px;
         align-items: center;
         justify-content: space-between;
         padding-left: 20px;
