--- a/style.css
+++ b/style.css
@@ -116,9 +116,12 @@ ul {
     }
 
     .pop-out-content {
+        padding-top: 5px;
         display: none;
         flex-direction: column;
         font-size: large;
+        gap: 8px;
+        align-items: center;
     }
 
     /* Hero section */
