--- a/Pages/page-style.css
+++ b/Pages/page-style.css
@@ -80,9 +80,9 @@ ul {
         display: none;
         flex-direction: column;
         align-items: center;
-        height: 40vh;
+        height: 50vh;
         justify-content: space-evenly;
-        font-size: x-large;
+        font-size: 2em;
     }
 
     header {
@@ -103,10 +103,30 @@ ul {
         margin: 0px;
     }
 
+    .pop-out i {
+        font-size: 10px;
+    }
+
+    .pop-out-item {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 5px;
+    }
+
+    .pop-out-content {
+        padding-top: 15px;
+        display: none;
+        flex-direction: column;
+        font-size: x-large;
+        gap: 20px;
+        align-items: center;
+    }
+
     /* Hero section */
     .hero {
         display: flex;
-        height: 40vh;
+        height: 50vh;
         align-items: center;
         justify-content: center;
     }
