--- a/Pages/page-style.css
+++ b/Pages/page-style.css
@@ -168,6 +168,20 @@ ul {
         margin-bottom: 0px;
     }
 
+    /* Publications section */
+    .publications {
+        width: 80vw;
+        flex-direction: column;
+        gap: 20px;
+        align-self: center;
+        align-items: baseline;
+    }
+
+    .publications h2 {
+        margin: 0px;
+        padding-top: 15px;
+    }
+
 
     /* Meet the team grid */
     .team-grid {
@@ -370,6 +384,50 @@ ul {
     .hero-header {
         font-size: 4em;
         font-weight: bold;
+    }
+
+    /* Meet the team section */
+    .team-grid {
+        max-width: 100vw;
+        flex-wrap: wrap;
+        padding-top: 20px;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .person {
+        width: 300px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding-bottom: 20px;
+    }
+
+    .image-name {
+        position: relative;
+        text-align: center;
+        color: white;
+    }
+
+    .photo {
+        width: 300px;
+        height: fit-content;
+        background-color: rgb(177, 162, 163);
+        background-blend-mode: multiply;
+        background-size: contain;
+        color:rgb(253, 243, 230);
+    }
+
+    .image-name h1 {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+
+    .description {
+        margin: 0px;
     }
 
 
